remove aria attributes and correct z-index

--- a/css/population-webmap.css
+++ b/css/population-webmap.css
@@ -35,7 +35,6 @@ body {
   left: 0px;
   min-width: 100%;
   height: 100%;
-  z-index: 1020;
 }
 
 @media only screen and (max-width: 1200px) {
